# 4.15.0
- Fixed issue when the quest description only showed one lines of list.
- Added cost for skipping quests
- Fixed SQLException when inserting a job

# 4.14.0
- Fixed %titlename% placeholder does not showed anything
- Re-added Cat, Cat is ALIVE!!
- Re-worked the quest list to support crowdin
- Implement more API event methods to PrePaymentEvent
- Fixed issue when the JobsExpGainEvent called when the income 0.
- Fixed issue when used the enchanted books, then can't enchanted properly
- Added argument for signUpdate command, to update all signs
- Removed hack for removing items from inventory when in browse GUI
- Fixed issue when the player gliding is not valid in 1.9.1 version
- Fixed signs updating
- Level, exp adding and taking amounts now correctly calculating.
- New placeholder %jobsr_user_job_(jname/number)% to show the player job.
- Added option to ignore the boosted items usage in off hand.
- Fixed money dupping issue when left clicked to block and earn income
- Fixed 1.11 & 1.12 entities don't work
- Fix bone meals dupping issue when interacted with seeds
- Should fixed issue when the JobsPrePaymentEvent getJob method always returns null
- Fixed income dupping issue and repair action not work correctly.
- Updated translations to the latest
- Jobs toggles will not be saved from now instantly when get income
- Added option to leave from job in jobs GUI.
- Quest objective amount is now optional (default 1)
- Fixed issue when used 1.12 and lower versions then some materials not work correctly.
- Added option to jobs shop to hide icon if a player there are no enough points to buy a item
- Fixed issue for inventory dragging when a player is in jobs GUI.
- Added new action type: Bake, to cooking foods with campfire.
- Fix for issue with jobs limits not being recalculated after levelup
- Fix for possible issue if you have MMKill in your config file while not having MythicMobs installed
- Fix for missing locale in itembonus command when you are not in that job