@@ -819,7 +819,7 @@ public class ConfigManager {
 			name = itemSection.getString("name");
 
 		    List<String> lore = new ArrayList<>();
-		    if (itemSection.contains("lore") && !itemSection.getStringList("lore").isEmpty())
+		    if (itemSection.contains("lore"))
 			for (String eachLine : itemSection.getStringList("lore")) {
 			    lore.add(org.bukkit.ChatColor.translateAlternateColorCodes('&', eachLine));
 			}
